- Removed all Rune platebody drops across all Revenants
- Removed all Rune pickaxe drops across all Revenants
- Removed all Rune axe drops across all Revenants
- Removed all Rune scimitar drops across all Revenants
- Removed ridiculous noted Manta ray drop across all Revenants
- Reverted the absurd 50-100 noted Sharks drop to a more believable number of 4 across all Revenants
- Reverted the noted tuna potato drop to a maximum of 5 across all Revenants
- Fixed a potential exploit with defensive brews and titan effects
- Fixed a potential exploit with chinchompas
- Addressed a potentially serious issue with charm droprates
< ---- ABOVE Released NOVEMBER 1, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Nov-1-2021 ---- >
- Removed halloween decorations
- Alkharid Upstairs locations can now be entered exited correctly
- Fix Yak Hide Armor crafting level requirements
- Spiky Vambraces crafing added
- Fixed Typo in Professor Oddenstein's dialogue
- Random Events can no longer spawn in the wilderness.
- Fairy rings emit a sound when teleporting.
- Void set effects now work more uniformly.
- Summoning familiars now grant combat xp when attacking
- Canoe travel interface now animates correctly
- Fix how the attack skill cape perk is calculated. It should now have a much more noticeable effect
- Properly track leaf-bladed sword drops in ::stats command
- Make broad bolts tradeable and fix their ranged strength
< ---- ABOVE Released NOVEMBER 22, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Nov-22-2021 ---- >
- Animations for passing through Isafdar Dense Forest added
- Implement Wire Traps, Leaf Traps, and Stick Traps in Isafdar
- Quest point cape/hood no longer unequip on login if wearing QP hood
- Random Event Genie lamps now scale exp correctly
- Void mace now consumes runes correctly
- Add remote kicking support to the Management Server